# dfa-dashboard

./: Procfile  README.md  pyproject.toml
app/: app.py
data/: README.md  ignore_ids.txt
data/chunks/: F32844291.clean.chunk.json  F32844397.clean.chunk.json  F32844399.clean.chunk.json  F32844418.clean.chunk.json  F32844455.clean.chunk.json  F32844481.clean.chunk.json  F32844564.clean.chunk.json  F32844617.clean.chunk.json  F32844642.clean.chunk.json  F32844671.clean.chunk.json  F32844733.clean.chunk.json  F32844784.clean.chunk.json  F32844798.clean.chunk.json  F32844809.clean.chunk.json  F32844812.clean.chunk.json  F32844907.clean.chunk.json  F32844936.clean.chunk.json  F32844947.clean.chunk.json  F32845026.clean.chunk.json  F32845035.clean.chunk.json  F32845037.clean.chunk.json  F32845076.clean.chunk.json  F32845079.clean.chunk.json  F32845102.clean.chunk.json  F32845115.clean.chunk.json  F32845157.clean.chunk.json  F32845205.clean.chunk.json  F32845252.clean.chunk.json  F32845329.clean.chunk.json  F32845339.clean.chunk.json  F32845376.clean.chunk.json  F32845403.clean.chunk.json  F32845412.clean.chunk.json  F32916900.clean.chunk.json  F32916922.clean.chunk.json  F32916995.clean.chunk.json  F32917003.clean.chunk.json  F33067703.clean.chunk.json  F33067709.clean.chunk.json  F33067710.clean.chunk.json  (+4284 more)
docs/: pipeline.md
prompts/: only_topic_no_registry_v3.txt
scripts/: 01_ocr.py  02_clean.py  03_chunk.py  04_extract.py  05_consolidate.py
scripts/utils/: fix_topic_source.py
(+8650 files in other folders)
